Fix right nav overlapping

--- a/ota-plus-web/app/reactapp/style/ota-default/common.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/common.scss
@@ -565,7 +565,7 @@ input {
   }
 
   .right-nav {
-    height: 100%;
+    height: 50px;
     margin: 0;
     display: flex;
     position: absolute;
